Revision history for Bio-miRNAture

1.01    Apr 30 2021.
        # Updates
        - Included 'no_homology' search mode to perform validations and subsequent analysis.
        - Support of multiple runs at the same time without I/O temporal files collision.
        - Automatic creation of output folder declared on the -w flag.
        - Inclusion of a global alignment (cmsearch -g) to validate structural curated sequences in
          comparison to reference covariance model (from structural evaluation if available or 
          used on the homology stage).
        - Extension of homology fasta sequences before structural validation with MIRfix.
        # Corrected bugs
        - Temporal file folders moved to TemporalFiles/ folder.
        - Corrected cleaning of temporal files.
        - Remove of genome.txt file and related functions.

1.00    Feb 1 2021.
        First version, released on an unsuspecting world.
